--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-export RECAPTCHA_SITE_KEY  = 6LdUIQ4UAAAAAFMDcLO2t8ygeA9dfdsJAupi9Czb
-export RECAPTCHA_SECRET_KEY = 6LdUIQ4UAAAAAGIXHZhC_t3cyLvTJHSJBrAW_fXj
+export RECAPTCHA_SITE_KEY  = '6LdUIQ4UAAAAAFMDcLO2t8ygeA9dfdsJAupi9Czb'
+export RECAPTCHA_SECRET_KEY = '6LdUIQ4UAAAAAGIXHZhC_t3cyLvTJHSJBrAW_fXj'
